# taskmanager

./: .gitignore  CLAUDE.md  Makefile  README.md  env.template  pyproject.toml  verify_timeout.py
.claude/: settings.json
.claude/agents/: taskmanager-captain.md  taskmanager-crew-api.md  taskmanager-crew-cli.md  taskmanager-crew-config.md  taskmanager-crew-core-domain.md  taskmanager-crew-persistence.md  taskmanager-crew-task-service.md
.claude/hooks/: ralph-hook.sh
.fleet/: bridge.yaml  tool-usage.jsonl
.fleet/analysis/: 20260407-f1s2-analysis.md
.fleet/captains/: default.yaml
.fleet/changes/: persistence-to-task-service-builtin-plugins.md  task-service-to-core-domain-20260407.md
.fleet/crews/: api.yaml  cli.yaml  config.yaml  core-domain.yaml  persistence.yaml  task-service.yaml
.fleet/officer-findings/: documentation-20260407-cli-execution.md  qa-20260407-cli-execution.md  type-safety-20260407-cli-execution.md
.fleet/officers/: adversary.yaml  documentation.yaml  evangelist.yaml  performance.yaml  product-manager.yaml  publisher.yaml  qa.yaml  type-safety.yaml
.fleet/reports/: 2026-04-08-f10s2-shell-completions-docs-COMPLETE.md  2026-04-08-f8s1-plugin-system-final-report.md  2026-04-08-health-info-endpoints-COMPLETE.md
docs/adr/: 001-feature-request-delta-analysis.md
src/taskmanager/: database.py  events.py  exceptions.py  executor.py  hooks.py  logging.py  main.py  models.py  scheduler.py  settings.py
src/taskmanager/api/: __init__.py  app.py  deps.py  schemas.py
src/taskmanager/api/routers/: __init__.py  health.py  runs.py  schedules.py  tasks.py
src/taskmanager/cli/: __init__.py  config.py  data.py  formatters.py  history.py  hook.py  plugin.py  run.py  schedule.py  serve.py  show_settings.py  task.py
src/taskmanager/plugins/: __init__.py  hookspecs.py  manager.py
src/taskmanager/services/: __init__.py  export_service.py  history_service.py  hook_service.py  run_service.py  schedule_service.py  task_service.py
tests/: conftest.py  test_database.py  test_exceptions.py  test_main.py  test_settings.py
tests/api/: conftest.py  test_app.py  test_deps.py  test_fixtures.py  test_health.py  test_runs.py  test_schedules.py  test_schemas.py  test_tasks.py
tests/cli/: test_config.py  test_data.py  test_history.py  test_hook.py  test_run.py  test_schedule.py  test_serve.py  test_show_settings.py  test_task.py
tests/unit/: test_cli_plugin.py  test_events.py  test_executor.py  test_export_service.py  test_history_service.py  test_hook_model.py  test_hooks.py  test_logging.py  test_plugin_retry.py  test_plugin_timeout.py  test_plugins.py  test_run_service.py  test_schedule_service.py  test_scheduler.py  test_task_service.py
(+3 files in other folders)
