[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskmanager"
version = "0.1.0"
description = "Simplistic task management, for Vibe playground"
readme = "README.md"
authors = [
  {name = "Denis Timofeev", email = "detijazzz@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",  # [all] extra removed in typer 0.14+; rich/shellingham/click are now default deps
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.0",
    "pluggy>=1.5",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
bugs = "https://github.com/deti/taskmanager"

[project.scripts]
show-settings = "taskmanager.cli.show_settings:main"
serve = "taskmanager.cli.serve:main"

# Configure hatchling to find packages in src/
[tool.hatch.build.targets.wheel]
packages = ["src/taskmanager"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

# Tool configurations
[tool.ruff]
src = ["src", "tests"]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
]
target-version = "py312"
line-length = 99
indent-width = 4

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "W", "B", "I", "N", "UP", "C4",
    "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
    "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA",
    "PGH", "PL", "TRY", "NPY", "RUF",
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "N999", # Hyphen in GitHub repo name
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["taskmanager"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"
